Add yellow function

--- a/circle.html
+++ b/circle.html
@@ -20,7 +20,10 @@
     function black() {
         document.getElementById("circle").style.background  = "black";
     }
-    
+
+    function yellow() {
+        document.getElementById("circle").style.background = "yellow";
+    }
 
 </script>
         
