--- a/circle.html
+++ b/circle.html
@@ -8,7 +8,7 @@
         <div class="friend" id="circle"></div>
     <button id="color-btn" onclick = "red()">Red</button>
     <button id="color-btn" onclick = "black()">black</button> 
-    <button id="color-btn" onclick = "red()">yellow</button> 
+    <button id="color-btn" onclick = "yellow()">yellow</button> 
     <button id="color-btn" onclick = "red()">orange</button>  
 
 <script>
