--- a/circle.html
+++ b/circle.html
@@ -7,9 +7,9 @@
      
         <div class="friend" id="circle"></div>
     <button id="color-btn" onclick = "red()">Red</button>
-    <button id="color-btn" onclick = "black()">black</button> 
-    <button id="color-btn" onclick = "yellow()">yellow</button> 
-    <button id="color-btn" onclick = "red()">orange</button>  
+    <button id="color-btn" onclick = "black()">Black</button> 
+    <button id="color-btn" onclick = "yellow()">Yellow</button> 
+    <button id="color-btn" onclick = "red()">Orange</button>  
 
 <script>
     
