Add orange function

--- a/circle.html
+++ b/circle.html
@@ -9,7 +9,7 @@
     <button id="color-btn" onclick = "red()">Red</button>
     <button id="color-btn" onclick = "black()">Black</button> 
     <button id="color-btn" onclick = "yellow()">Yellow</button> 
-    <button id="color-btn" onclick = "red()">Orange</button>  
+    <button id="color-btn" onclick = "orange()">Orange</button>  
 
 <script>
     
@@ -23,6 +23,10 @@
 
     function yellow() {
         document.getElementById("circle").style.background = "yellow";
+    }
+
+    function orange() {
+        document.getElementById("circle").style.background = "orange";
     }
 
 </script>
