--- a/circle.html
+++ b/circle.html
@@ -9,9 +9,25 @@
     <button id="color-btn" onclick = "red()">Red</button>
     <button id="color-btn" onclick = "black()">Black</button> 
     <button id="color-btn" onclick = "yellow()">Yellow</button> 
-    <button id="color-btn" onclick = "orange()">Orange</button>  
+    <button id="color-btn" onclick = "orange()">Orange</button> 
+    <button id="color-btn" onclick = "changeColor()">Change Color</button> 
 
 <script>
+
+    var colors = ["red", "black", "yellow", "orange"];
+    var i = 0;
+    
+
+    function changeColor() {
+        document.getElementById("circle").style.background = colors[i];
+        i++;
+        if (i == 4) {
+            i=0;
+        }
+    }
+
+
+
     
     function red() {
         document.getElementById("circle").style.background = "red";    
